# neku_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  fgk_neku.py  install.sh  neku.py  package.json  pyproject.toml  requirements.txt
config/: bot_config.json
crockpot/: subs.srt
db/: data.db
nekubot/: __init__.py  config.py  context.py  discord_bot.py  fgk_bot.py  generate_media.py  media.py  outworld.py  tts.py
tests/: test_config.py  test_context_store.py  test_fgk_bot.py  test_generate_media.py  test_media.py  test_outworld.py  test_tts.py
